examples/authorizationpolicy-direct-to-direct.yaml
# AuthorizationPolicy resources that apply when ingress gateway is using
# AUTO_PASSTHROUGH.  In these cases, the gateway does not authenticate, so
# the policy cannot match against principals.  Note, if proxying on the import
# side, the egress gateway's principal should be used instead of the workload's.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mysqldb-authz
  namespace: mesh1-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: mysqldb
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/mesh2-bookinfo/sa/bookinfo-ratings-v2
      to:
        - operation:
            ports:
              - '3606'
      when:
        - key: connection.sni
          values:
            - '*.mysqldb.mesh1-exports.svc.cluster.local'

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ratings-authz
  namespace: mesh1-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ratings
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/mesh2-bookinfo/sa/bookinfo-reviews-v2
      to:
        - operation:
            hosts:
              - '*.ratings.mesh1-bookinfo.svc.local'
            ports:
              - '9080'
